# ai-code-inspector

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: LMSTUDIO.md  PROMPTS.md
examples/: complex_legacy.py  use-lmstudio.sh
examples/example1/: app.py
examples/example2/: app.js
legacy_inspector/: __init__.py  ai_helper.py  cli.py  config.py  dependency_graph.py  metrics.py  parser_manager.py  reporter.py  scanner.py  smells.py
prompts/: clean_code_review.txt  explain_module.txt  prioritize.txt  refactor_patch.txt
tests/: conftest.py  test_metrics.py  test_prompts_integration.py  test_scan.py
